# bugle

./: .gitignore  README.md  environment-min.yml  environment.yml  requirements.txt  setup.cfg  setup.py
docs/: bugle-general.puml  references.md
src/bugle/: __init__.py  changelog.md  config.py.template
src/bugle/crawl/: config.py.template  crawl.py  crawler.py  page.py
src/bugle/index/: analysis.py  index.py  load.py  webpage.py
src/bugle/scrape/: crawler.py  page.py
tests/: __init__.py  test_crawler.py  test_index.py  test_page.py
tests/data/: content.json  index.pkl
