[metadata]
name = bugle
version = file: src/bugle/VERSION.txt
author = Environmental Data Initiative
author_email = support@edirepository.org
description = Bugle: a light-weight web site crawler adn search indexer
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/PASTAplus/bugle
project_urls =
    Bug Tracker = https://github.com/PASTAplus/bugle/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires =  >=3.11
install_requires =
    click==8.0.3
    daiquiri==3.0.0
    beautifulsoup4==4.10.0
    lxml==4.7.1
    requests==2.27.1

[options.packages.find]
where = src
include = bugle
